--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.home.new_vocab"></activity>
+        <activity android:name=".ui.home.detailed"></activity>
+        <activity android:name=".ui.home.new_vocab$details" />
+        <activity android:name=".ui.home.new_vocab" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
