--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
         <activity android:name=".ui.home.detailed" />
         <activity android:name=".ui.home.LoginScreen" />
         <activity android:name=".ui.home.new_vocab" />
+        <activity android:name=".ui.home.forgetPasswordScreen" />
+        <activity android:name=".ui.home.SignUpScreen" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
